##################################################
 Revision history for Log::Log4perl
##################################################

1.26 (not yet released)
    *   (ms) [RT 50090] Added non-portable linebreaks to PatternLayout
             (requested by Zdeněk Juran).
    *   (ms) [RT 50094] Docfix for PatternLayout in main manpage (spotted
             by Peter Rabbitson).
    *   (ms) [RT 28679] Added exists() to "Threshold" keyword uppercase 
             check.

1.25 (2009/09/27)
    *   (ms) Appender::File is now closing (or sysclosing) the file
             on file_close() instead of just undef'ing the handle.
    *   (ms) Added l4p-tmpl helper script to help whipping up a new
             log4perl configuration file.
    *   (ms) Fixed uninitialized warning on XML configuration files,
             reported by jbkilian on the sourceforge mailing list.
    *   (ms) Applied patch [RT 43426] by AFF <aff@cpan.org> to have 
             appender_thresholds_adjust return number of appenders changed.
    *   (ms) [RT 34400] New :nostrict target which allows redefining a 
             category within a Log4perl configuration file without error
             or even a warning.
    *   (ms) [RT 34401] Applied patch by Jae Gangemi, who fixed
             code references in @INC on Win32 systems. 
    *   (ms) [RT 32259] Patternlayout now supports %R, which returns the
             number of milliseconds elapsed from last logging event to
             the current logging event (thanks to Emmanuel Rodriguez for
             the patch).
    *   (ms) [RT 30899] Color configuration and attribute support 
             added to ScreenColoredLevels appender by Jason Kohles.
    *   (ms) [RT 28987] If UNIVERSAL is available, appender existence is
             now verified by checking can() on the appender's new() 
             method (applied modified patch by Gabriel Berriz).

1.24 (2009/07/08)
    *   (ms) Fixed bug with Log::Log4perl::Util::tmpfile_name which 