@@ -2,6 +2,11 @@ package Log::Log4perl::Config::BaseConfigurator;
 
 use warnings;
 use strict;
+use constant _INTERNAL_DEBUG => 0;
+
+*eval_if_perl      = \&Log::Log4perl::Config::eval_if_perl;
+*compile_if_perl   = \&Log::Log4perl::Config::compile_if_perl;
+*leaf_path_to_hash = \&Log::Log4perl::Config::leaf_path_to_hash;
 
 ################################################
 sub new {
@@ -51,6 +56,100 @@ sub parse {
     die __PACKAGE__ . "::parse() is a virtual method. " .
         "It must be implemented " .
         "in a derived class (currently: ", ref(shift), ")";
+}
+
+################################################
+sub parse_post_process {
+################################################
+    my($self, $data, $leaf_paths) = @_;
+    
+    #   [
+    #     'category',
+    #     'value',
+    #     'WARN, Logfile'
+    #   ],
+    #   [
+    #     'appender',
+    #     'Logfile',
+    #     'value',
+    #     'Log::Log4perl::Appender::File'
+    #   ],
+    #   [
+    #     'appender',
+    #     'Logfile',
+    #     'filename',
+    #     'value',
+    #     'test.log'
+    #   ],
+    #   [
+    #     'appender',
+    #     'Logfile',
+    #     'layout',
+    #     'value',
+    #     'Log::Log4perl::Layout::PatternLayout'
+    #   ],
+    #   [
+    #     'appender',
+    #     'Logfile',
+    #     'layout',
+    #     'ConversionPattern',
+    #     'value',
+    #     '%d %F{1} %L> %m %n'
+    #   ]
+
+    for my $path ( @{ Log::Log4perl::Config::leaf_paths( $data )} ) {
+
+        print "path=@$path\n" if _INTERNAL_DEBUG;
+
+        if(0) {
+        } elsif( 
+            $path->[0] eq "appender" and
+            $path->[2] eq "trigger"
+          ) {
+            my $ref = leaf_path_to_hash( $path, $data );
+            my $code = compile_if_perl( $$ref );
+
+            if(_INTERNAL_DEBUG) {
+                if($code) {
+                    print "Code compiled: $$ref\n";
+                } else {
+                    print "Not compiled: $$ref\n";
+                }
+            }
+
+            $$ref = $code if defined $code;
+        } elsif (
+            $path->[0] eq "filter"
+          ) {
+            # do nothing
+        } elsif (
+            $path->[0] eq "appender" and
+            $path->[2] eq "warp_message"
+          ) {
+            # do nothing
+        } elsif (
+            $path->[0] eq "appender" and
+            $path->[3] eq "cspec" or
+            $path->[1] eq "cspec"
+          ) {
+              # could be either
+              #    appender appndr layout cspec
+              # or 
+              #    PatternLayout cspec U value ...
+              #
+            # do nothing
+        } else {
+            my $ref = leaf_path_to_hash( $path, $data );
+
+            if(_INTERNAL_DEBUG) {
+                print "Calling eval_if_perl on $$ref\n";
+            }
+
+            $$ref = eval_if_perl( $$ref );
+        }
+    }
+
+    return $data;
 }
 
 1;
