@@ -7,7 +7,7 @@
 # change 'tests => 1' to 'tests => last_test_to_print';
 #########################
 use Test::More;
-BEGIN { plan tests => 23 };
+BEGIN { plan tests => 24 };
 
 use Log::Log4perl;
 use Log::Log4perl::Appender::TestBuffer;
@@ -341,3 +341,17 @@ is($parser->value("log4j.appender.A1"),
 
 is($parser->value("log4perl.appender.A1.layout.ConversionPattern"), 
    "object%m%n", "value() accessor log4perl");
+
+######################################################################
+# Test accessors
+######################################################################
+my $conf = q{
+log4perl.category.pf.trigger = DEBUG
+log4j.appender.A1        = Log::Log4perl::Appender::TestBuffer
+log4j.appender.A1.layout = org.apache.log4j.PatternLayout
+log4j.appender.A1.layout.ConversionPattern = object%m%n
+};
+
+eval { Log::Log4perl->init( \$conf ); };
+
+is $@, "", "'trigger' category [rt.cpan.org #50495]";
